# moveinsync-assignment

./: BACKGROUND_JOBS_README.md  FRONTEND_SETUP.md  README.md  SETUP_ADMIN_USER.md  TROUBLESHOOTING.md  env.example  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  test_jwt.py
FRONTEND/: main.py
app/: main.py
app/auth/: dependencies.py  jwt_handler.py  password_utils.py
app/config/: default_rules.json
app/jobs/: __init__.py  auto_close_job.py  scheduler.py
app/routes/: alert_routes.py  auth_routes.py  dashboard_routes.py  rule_routes.py
app/services/: alert_service.py  dashboard_service.py  job_service.py  rule_engine.py  rule_service.py
app/utils/: alert_id_generator.py
frontend/: ERROR_FIXES.md  FIXES_APPLIED.md  LOGIN_FIX.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: AlertDetailModal.tsx  AlertSummaryCards.tsx  AutoClosedAlertsTable.tsx  RecentActivities.tsx  SourceDistributionChart.tsx  TopOffendersTable.tsx  (+1 more)
scripts/: create_admin.py  test_phase3.py  test_single_endpoint.py
src/: App.tsx
src/api/: main.py
src/components/: AlertDetailModal.tsx  AlertSummaryCards.tsx  AutoClosedAlertsTable.tsx  RecentActivities.tsx  SourceDistributionChart.tsx  TopOffendersTable.tsx  TrendChart.tsx
src/database/: __init__.py  connection.py  models.py
src/pages/: Dashboard.tsx
src/services/: api.ts
tests/: __init__.py  conftest.py  test_api.py
(+7 files in other folders)
